--- a/content/blog/cdc-use-cases-7-ways-to-put-cdc-to-work.adoc
+++ b/content/blog/cdc-use-cases-7-ways-to-put-cdc-to-work.adoc
@@ -26,7 +26,7 @@ This is because it enables the tight integration of transactional databases into
 <!--more-->
 
 == What is CDC?
-CDC responds to changes–such as inserts, updates, and deletions–as they are made in a transactional database and sends those changes in real time to another system for ingesting and processing.
+CDC responds to changes--such as inserts, updates, and deletions--as they are made in a transactional database and sends those changes in real time to another system for ingesting and processing.
 While there are multiple possible ways for implementing a CDC solution, the most powerful approach is log-based CDC, which retrieves change events from the transaction log of a database.
 
 image::cdc-use-cases-fig1.webp[]
