--- a/content/blog/cdc-use-cases.adoc
+++ b/content/blog/cdc-use-cases.adoc
@@ -20,7 +20,7 @@ Change Data Capture (CDC) is a powerful tool in data engineering and has seen a 
 
 == What is CDC?
 
-CDC responds to changes–such as inserts, updates, and deletions–as they are made in a transactional database and sends those changes in real time to another system for ingesting and processing. While there are multiple possible ways for implementing a CDC solution, the most powerful approach is log-based CDC, which retrieves change events from the transaction log of a database.
+CDC responds to changes--such as inserts, updates, and deletions--as they are made in a transactional database and sends those changes in real time to another system for ingesting and processing. While there are multiple possible ways for implementing a CDC solution, the most powerful approach is log-based CDC, which retrieves change events from the transaction log of a database.
 
 image::cdc-use-cases-1.webp[]
 
