--- a/content/blog/getting-started-with-pyflink-on-kubernetes.adoc
+++ b/content/blog/getting-started-with-pyflink-on-kubernetes.adoc
@@ -289,7 +289,7 @@ In order to use that image from within Kubernetes, you'll finally need to load i
 
 [source,shell,linenums]
 ----
-kind load docker-image decodable-examples/pyflink-hello-world:latest –name pyflink-test
+kind load docker-image decodable-examples/pyflink-hello-world:latest --name pyflink-test
 ----
 
 == Deploying a PyFlink Job On Kubernetes
