--- a/content/blog/ideation-kubernetes-native-kafka-connect.asciidoc
+++ b/content/blog/ideation-kubernetes-native-kafka-connect.asciidoc
@@ -55,7 +55,7 @@ All these strategies can help to run connectors for running connectors safely an
 
 == A Vision for Kubernetes-native Kafka Connect
 
-Having explored the potential issues with running Kafka Connect on Kubernetes, let's finally discuss how Connect could be reimagined for being more Kubernetes-friendly. What are the parts that could remain? Which things would have to change? Many of the questions and shortcomings raised above – such as workload isolation, applying resource constraints, capability-based scheduling, lifecycle management – have been solved by Kubernetes at the pod level already, so how could that foundation be leveraged for Kafka Connect?
+Having explored the potential issues with running Kafka Connect on Kubernetes, let's finally discuss how Connect could be reimagined for being more Kubernetes-friendly. What are the parts that could remain? Which things would have to change? Many of the questions and shortcomings raised above -- such as workload isolation, applying resource constraints, capability-based scheduling, lifecycle management -- have been solved by Kubernetes at the pod level already, so how could that foundation be leveraged for Kafka Connect?
 
 To put a disclaimer first: this part of this post may be a bit dissatisfying to read for some, as it merely describes an _idea_, I haven't actually implemented any of this. My line of thinking is to hopefully ignite a discussion in the community and gauge the general level of interest, perhaps even motivating someone in the community to follow through and make this a reality. At least, that's the plan :)
 
