--- a/content/blog/postgres-15-logical-decoding-row-filters-with-debezium.adoc
+++ b/content/blog/postgres-15-logical-decoding-row-filters-with-debezium.adoc
@@ -30,7 +30,7 @@ Reasons for specifically configuring which columns and rows should be contained 
 * Excluding columns or rows with sensitive data can be necessary in order to satisfy privacy requirements, when for instance Personally Identifiable Information (PII) shouldn't be exposed to external systems
 * Filtering published rows by tenant id can be useful for setting up tenant-specific change streams in a multi-tenant architecture
 
-Before the advent of Postgres-native column lists and row filters, users of link:https://debezium.io/[Debezium] – a popular open-source platform for change data capture (CDC), which also is used by several Decodable CDC connectors – would typically have implemented these kinds of use cases via a combination of configuration options and single message transformations (SMTs).
+Before the advent of Postgres-native column lists and row filters, users of link:https://debezium.io/[Debezium] -- a popular open-source platform for change data capture (CDC), which also is used by several Decodable CDC connectors -- would typically have implemented these kinds of use cases via a combination of configuration options and single message transformations (SMTs).
 
 Projections are supported in Debezium via the link:https://debezium.io/documentation/reference/stable/connectors/postgresql#postgresql-property-column-include-list[column.include.list] and link:https://debezium.io/documentation/reference/stable/connectors/postgresql#postgresql-property-column-exclude-list[column.exclude.list] options.
 These configuration options are applied client-side, i.e.
