--- a/content/blog/processing-github-webhooks-with-decodable.adoc
+++ b/content/blog/processing-github-webhooks-with-decodable.adoc
@@ -132,14 +132,14 @@ But we can also take a look at a preview of the output stream within the Decodab
 
 
 
-And that's it–we've set up a stream processing pipeline for processing GitHub webhook events, allowing us to react to events in a GitHub repository in real-time and drive all kinds of interesting use cases based on that.
+And that's it--we've set up a stream processing pipeline for processing GitHub webhook events, allowing us to react to events in a GitHub repository in real-time and drive all kinds of interesting use cases based on that.
 Whether its analyses as shown above, alerting, or feeding data to machine learning models, the sky's the limit.
 
 Taking a step back, the implementation of this use case sparked an interesting discussion within the engineering team about how we could further simplify things here.
 While it's not too much effort to bring the webhook request into the required shape via a separate JavaScript worker, ideally this would not be needed at all.
 To that end, having a bespoke GitHub connector would be a great addition to the Decodable platform, which could take care of this completely transparently, as well as taking advantage of GitHub's mechanism for link:https://docs.github.com/en/webhooks/securing-your-webhooks[signing and validating] webhook events.
 
-We've added this to the backlog, and if you think this would be useful, I'd love to hear from you–just hit me up in any of the channels listed below!
+We've added this to the backlog, and if you think this would be useful, I'd love to hear from you--just hit me up in any of the channels listed below!
 
 
 
