--- a/content/blog/why-i-joined-decodable.asciidoc
+++ b/content/blog/why-i-joined-decodable.asciidoc
@@ -53,7 +53,7 @@ In regards to the hiring process itself, it could probably be a topic for a sepa
 
 So those are the three key reasons which made me join Decodable: the exciting field of data streaming, the start-up environment, and a highly competent and friendly team.
 
-In case you're wondering what exactly I will be doing – that's something we're still figuring out. I am a member of the engineering organization, so I will get my fingers onto Apache Flink, but of course also on Decodable's SaaS product around it. But I'm also planning to continue my fair share of evangelization work and talk about technology and its applications in blog posts or conference sessions. I hope to share my input on the product, be part of customer conversations, and much more. For the beginning, I'll mostly focus on learning and sharing feedback based on my perspective of being the "new guy" on the team. 
+In case you're wondering what exactly I will be doing -- that's something we're still figuring out. I am a member of the engineering organization, so I will get my fingers onto Apache Flink, but of course also on Decodable's SaaS product around it. But I'm also planning to continue my fair share of evangelization work and talk about technology and its applications in blog posts or conference sessions. I hope to share my input on the product, be part of customer conversations, and much more. For the beginning, I'll mostly focus on learning and sharing feedback based on my perspective of being the "new guy" on the team. 
 
 Fully adhering to the start-up spirit, I'm sure things will be very much in flux and my responsibilities will shift over time.
 But that dynamic is exactly what I'm looking for by joining Decodable.
