--- a/content/blog/failover-replication-slots-with-postgres-17.adoc
+++ b/content/blog/failover-replication-slots-with-postgres-17.adoc
@@ -268,10 +268,10 @@ You may consider this approach also for connecting to an on-prem database in a p
 
 The overall architecture looks like this:
 
-
+.Solution overview
 image::failover-slots-1.png[]
-_Fig._
-_1: Solution overview_For the following steps, you'll need to have these things:
+
+For the following steps, you'll need to have these things:
 
 * A free Decodable account
 * The Decodable CLI installed on your machine
@@ -427,10 +427,10 @@ user@primary:inventorydb> UPDATE inventory.customers SET first_name='Samantha' w
 ----
 Shortly thereafter, these updates will be reflected in the stream preview as well:
 
-
+.Postgres data change events in the Decodable stream preview
 image::failover-slots-2.png[]
-_Fig._
-_2: Postgres data change events in the Decodable stream preview_Now let's simulate a failover from primary to replica server and see how the failover of the replication slot is handled.
+
+Now let's simulate a failover from primary to replica server and see how the failover of the replication slot is handled.
 Stop the primary Postgres node:
 
 
