--- a/content/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable.adoc
+++ b/content/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable.adoc
@@ -55,10 +55,8 @@ To that end, custom Flink jobs are introduced to the Decodable platform as anoth
 This means you can easily integrate with fully-managed connectors, only moving those parts of your logic into a custom job which require a bespoke imperative implementation.
 You also can arbitrarily combine SQL-based and custom pipelines within one and the same end-to-end data flow.
 
-
+.SQL-based and Flink-based custom pipelines in Decodable
 image::flink-jobs-decodable-1.webp[]
-_Fig._
-_1: SQL-based and Flink-based custom pipelines in Decodable._
 
 That way, Decodable allows you to benefit from SQL whenever it's possible (ease of use, automatic query optimizations, etc.), while giving you the "escape hatch" of implementing and running bespoke Flink jobs when and where it's needed.
 When migrating existing Flink jobs to Decodable, you can either run them as-is, or gradually extract existing specific parts into "native" Decodable components, for instance the source and sink connectors of a job, or those processing parts of a job which can be expressed using SQL.
